--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -2,3 +2,5 @@
 # Disabled rules, comment format is: [Name of rule] - [Reason for disabling]
 dotnet_diagnostic.CS1591.severity = none # Missing XML comment for publicly visible type or member - Don't need to document test methods
 dotnet_diagnostic.SA1600.severity = none # Elements should be documented - Don't need to document test methods
+dotnet_diagnostic.CA1707.severity = none # Remove the underscores from member name - Some test names should contain underscores
+dotnet_diagnostic.SA0001.severity = none # XML comment analysis is disabled due to project configuration - Tests don't use XML documentation
