--- a/src/Directory.Build.Props
+++ b/src/Directory.Build.Props
@@ -8,4 +8,12 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
+    <!-- Git-based version stamps -->
+    <ItemGroup>
+        <PackageReference Include="Nerdbank.GitVersioning"
+                          Version="3.5.107"
+                          PrivateAssets="all"
+                          Condition="!Exists('packages.config')"/>
+    </ItemGroup>
+
 </Project>
