--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: 🧪 Run ${{matrix.project}}.${{matrix.test-type}} with code coverage
         run: >
-          dotnet test --no-build ./test/${{matrix.project}}.${{matrix.test-type}}
+          dotnet test --no-build ./tests/${{matrix.project}}.${{matrix.test-type}}
           --blame-hang
           --blame-hang-timeout 1m
           --blame-hang-dump-type none
