--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -32,7 +32,7 @@ jobs:
       - name: 🧰 Cache build
         uses: actions/cache@v3
         with:
-          path: /home/runner/work/${{ github.event.repository.name }}/**
+          path: ./**
           key: ${{ github.run_id }}-build-cache
 
       - name: ⚙️ Setup dotnet
@@ -77,7 +77,7 @@ jobs:
       - name: 🧰 Read cached build
         uses: actions/cache@v3
         with:
-          path: /home/runner/work/${{ github.event.repository.name }}/**
+          path: ./**
           key: ${{ github.run_id }}-build-cache
 
       - name: Print file structure
