Enable test logging

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -87,6 +87,8 @@ jobs:
         run: >
           dotnet test tests/${{matrix.project}}.${{matrix.test-type}}
           --no-build
+          --logger "console;verbosity=detailed"
+          --verbosity diagnostic
           --blame-hang
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
