Place nuget packages in tmp-folder

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -17,6 +17,9 @@ on:
 
   workflow_dispatch:
 
+env:
+  NUGET_PACKAGES: /tmp/.nuget/packages
+
 jobs:
   build:
     name: 🛠 Build all projects in solution
