Change format of msbuild parameters

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -96,14 +96,14 @@ jobs:
           --blame-hang
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
-          -p:CollectCoverage=true
-          -p:Threshold=90
-          -p:ThresholdType=branch
-          -p:CoverletOutput=../../coverage/coverage.json
-          -p:CoverletOutputFormat=opencover
-          -p:ExcludeByFile=\"**/Program.cs\"
-          -p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute,ExcludeFromCodeCoverageAttribute\"
-          -p:Include=\"[${{matrix.project}}]*\"
+          /p:CollectCoverage=true
+          /p:Threshold=90
+          /p:ThresholdType=branch
+          /p:CoverletOutput=../../coverage/lcov.info
+          /p:CoverletOutputFormat=lcov
+          /p:ExcludeByFile=\"**/Program.cs\"
+          /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute,ExcludeFromCodeCoverageAttribute\"
+          /p:Include=\"[${{matrix.project}}]*\"
 
       - name: Print file structure
         run: tree -a
