--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -91,8 +91,7 @@ jobs:
         run: >
           dotnet test tests/${{matrix.project}}.${{matrix.test-type}}
           --no-build
-          --logger "console;verbosity=detailed"
-          --verbosity detailed
+          --verbosity minimal
           --blame-hang
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
