--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -89,7 +89,12 @@ jobs:
 
       - name: 🧪 Run ${{matrix.project}}.${{matrix.test-type}} with code coverage
         run: >
-          dotnet test --no-build tests/${{matrix.project}}.${{matrix.test-type}}
+          dotnet test tests/${{matrix.project}}.${{matrix.test-type}}
+          --no-build
+          --verbosity minimal
+          --blame-hang
+          --blame-hang-timeout 1m
+          --blame-hang-dump-type full
           -p:CollectCoverage=true
           -p:Threshold=90
           -p:ThresholdType=branch
