--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -87,6 +87,7 @@ jobs:
       - name: 🧪 Run ${{matrix.project}}.${{matrix.test-type}} with code coverage
         run: >
           dotnet test tests/${{matrix.project}}.${{matrix.test-type}}
+          --no-build
           --verbosity minimal
           --blame-hang
           --blame-hang-timeout 1m
