--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -17,6 +17,9 @@ on:
 
   workflow_dispatch:
 
+env:
+  COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+
 jobs:
   build:
     name: 🛠 Build all projects in solution
