--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -113,6 +113,8 @@ jobs:
 
       - name: 📃 Coveralls Parallel
         uses: coverallsapp/github-action@master
+        env:
+          NODE_COVERALLS_DEBUG: 1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           flag-name: run-${{matrix.project}}.${{matrix.test-type}}
