--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -104,7 +104,7 @@ jobs:
           --blame-hang-dump-type full
           -p:CollectCoverage=true
           -p:Threshold=90
-          -p:ThresholdType=branch
+          -p:ThresholdType=\"line,branch,method\"
           -p:CoverletOutput=../../coverage/lcov.info
           -p:CoverletOutputFormat=lcov
           -p:ExcludeByFile=\"**/Program.cs\"
