--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - 'src/**'
-      - 'test/**'
+      - 'tests/**'
       - '.github/workflows/verification.yml'
 
   pull_request:
