--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -60,7 +60,7 @@ jobs:
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
           -p:CollectCoverage=true
-          -p:Threshold=90
+          ${{ inputs.coverage-threshold && format('-p:Threshold={0}', inputs.coverage) || ' ' }}
           -p:ThresholdType=\"line,branch,method\"
           -p:CoverletOutput=../../coverage/lcov.info
           -p:CoverletOutputFormat=lcov
@@ -91,12 +91,4 @@ jobs:
 
   trigger-deploy:
     name: 📈 Trigger deploy workflow
-    runs-on: ubuntu-latest
-    needs: [ test ]
-
-    steps:
-      - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          event-type: verification-passed
+    uses: ./.github/workflows/deploy.yml
