--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -21,73 +21,18 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
-  test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    needs: [ build ]
-    strategy:
-      matrix:
-        project: [ 'First', 'Second' ]
-        test-type: [ 'Spec', 'UnitTests' ]
-      fail-fast: false
+  unit-tests:
+    uses: ./.github/workflows/tests.yml
+    with:
+      projects: >-
+        ["First.UnitTests", "Second.UnitTests"]
+      coverage-threshold: 0
 
-    steps:
-      - name: 🛒 Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
-
-      - name: 🧰 Read Cached NuGet packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-
-      - name: 🧰 Read cached build
-        uses: actions/cache@v3
-        with:
-          path: ./**
-          key: ${{ github.run_id }}-build-cache
-
-      - name: 🧪 Run ${{matrix.project}}.${{matrix.test-type}} with code coverage
-        run: >
-          dotnet test tests/${{matrix.project}}.${{matrix.test-type}}
-          --no-build
-          --verbosity minimal
-          --blame-hang
-          --blame-hang-timeout 1m
-          --blame-hang-dump-type full
-          -p:CollectCoverage=true
-          ${{ inputs.coverage-threshold && format('-p:Threshold={0}', inputs.coverage) || ' ' }}
-          -p:ThresholdType=\"line,branch,method\"
-          -p:CoverletOutput=../../coverage/lcov.info
-          -p:CoverletOutputFormat=lcov
-          -p:ExcludeByFile=\"**/Program.cs\"
-          -p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute,ExcludeFromCodeCoverageAttribute\"
-          -p:Include=\"[${{matrix.project}}]*\"
-
-      - name: 📃 Coveralls Parallel
-        uses: coverallsapp/github-action@master
-        env:
-          NODE_COVERALLS_DEBUG: 1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          flag-name: run-${{matrix.project}}.${{matrix.test-type}}
-          parallel: true
-
-  finish:
-    name: 🗄 Upload Coveralls data
-    runs-on: ubuntu-latest
-    needs: [ test ]
-
-    steps:
-      - name: Coveralls Finished
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.github_token }}
-          parallel-finished: true
+  functional-tests:
+    uses: ./.github/workflows/tests.yml
+    with:
+      projects: >-
+        ["First.Spec", "Second.Spec"]
 
   trigger-deploy:
     name: 📈 Trigger deploy workflow
