Make trigger-deploy run last

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -37,5 +37,6 @@ jobs:
         ["First.Spec", "Second.Spec"]
 
   trigger-deploy:
+    needs: [ build, unit-tests, functional-tests ]
     name: 📈 Trigger deploy workflow
     uses: ./.github/workflows/deploy.yml
