--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,7 +56,7 @@ jobs:
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
           -p:CollectCoverage=true
-          ${{ inputs.coverage-threshold && format('-p:Threshold={0}', inputs.coverage-threshold) || ' ' }}
+          -p:Threshold=${{ inputs.coverage-threshold }}
           -p:ThresholdType=\"line,branch,method\"
           -p:CoverletOutput=../../coverage/lcov.info
           -p:CoverletOutputFormat=lcov
@@ -65,6 +65,7 @@ jobs:
           -p:Include=\"[${{matrix.project}}]*\"
 
       - name: 📃 Coveralls Parallel
+        if: inputs.coverage-threshold > 0
         uses: coverallsapp/github-action@master
         env:
           NODE_COVERALLS_DEBUG: 1
@@ -77,6 +78,7 @@ jobs:
     name: 🗄 Upload Coveralls data
     runs-on: ubuntu-latest
     needs: [ test ]
+    if: inputs.coverage-threshold > 0
 
     steps:
       - name: Coveralls Finished
