--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,11 +7,10 @@ on:
         description: 'Stringified JSON object listing test projects to run tests of'
         required: true
         type: string
-      coverage-threshold:
-        description: 'Under which code coverage level (%) to fail the workflow'
-        default: 90
-        required: false
-        type: number
+      test-types:
+        description: 'Stringified JSON object listing the types of test projects to run'
+        required: true
+        type: string
       tests-directory:
         description: 'Where the test projects are located'
         required: false
@@ -25,6 +24,7 @@ jobs:
     strategy:
       matrix:
         project: ${{ fromJson(inputs.projects) }}
+        test-type: ${{ fromJson(inputs.test-types) }}
       fail-fast: false
 
     steps:
@@ -47,38 +47,37 @@ jobs:
           path: ./**
           key: ${{ github.run_id }}-build-cache
 
-      - name: 🧪 Run ${{matrix.project}} with code coverage
+      - name: 🧪 Run ${{matrix.project}}.${{matrix.test-type.type}} with code coverage
         run: >
-          dotnet test ${{inputs.tests-directory}}/${{matrix.project}}
+          dotnet test ${{inputs.tests-directory}}/${{matrix.project}}.${{matrix.test-type.type}}
           --no-build
           --verbosity minimal
           --blame-hang
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
           -p:CollectCoverage=true
-          -p:Threshold=${{ inputs.coverage-threshold }}
+          -p:Threshold=${{ matrix.test-type.coverage-threshold }}
           -p:ThresholdType=\"line,branch,method\"
           -p:CoverletOutput=../../coverage/lcov.info
           -p:CoverletOutputFormat=lcov
           -p:ExcludeByFile=\"**/Program.cs\"
           -p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute,ExcludeFromCodeCoverageAttribute\"
-          -p:Include=\"[${{matrix.project}}]*\"
+          -p:Include=\"[${{matrix.project}}.${{matrix.test-type.type}}]*\"
 
       - name: 📃 Coveralls Parallel
-        if: inputs.coverage-threshold > 0
+        if: matrix.test-type.coverage-threshold > 0
         uses: coverallsapp/github-action@master
         env:
           NODE_COVERALLS_DEBUG: 1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          flag-name: run-${{matrix.project}}
+          flag-name: run-${{matrix.project}}.${{matrix.test-type.type}}
           parallel: true
 
   finish:
     name: 🗄 Upload Coveralls data
     runs-on: ubuntu-latest
     needs: [ test ]
-    if: inputs.coverage-threshold > 0
 
     steps:
       - name: Coveralls Finished
