--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -21,7 +21,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
-  unit-tests:
+  test:
     needs: [ build ]
     uses: ./.github/workflows/tests.yml
     with:
@@ -40,6 +40,6 @@ jobs:
         ]
 
   trigger-deploy:
-    needs: [ build, unit-tests, functional-tests ]
+    needs: [ build, test ]
     name: 📈 Trigger deploy workflow
     uses: ./.github/workflows/deploy.yml
