Remove incorrect character

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -27,7 +27,7 @@ jobs:
     with:
       projects: >-
         ["First", "Second"]
-      test-types: >-
+      test-types: >
         [
           {
             type: "UnitTests",
