--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,7 +56,7 @@ jobs:
           --blame-hang-timeout 1m
           --blame-hang-dump-type full
           -p:CollectCoverage=true
-          -p:Threshold=${{ matrix.test-type.coverage-threshold }}
+          -p:Threshold=${{ matrix.test-type.coverageThreshold }}
           -p:ThresholdType=\"line,branch,method\"
           -p:CoverletOutput=../../coverage/lcov.info
           -p:CoverletOutputFormat=lcov
@@ -65,7 +65,7 @@ jobs:
           -p:Include=\"[${{matrix.project}}.${{matrix.test-type.type}}]*\"
 
       - name: 📃 Coveralls Parallel
-        if: matrix.test-type.coverage-threshold > 0
+        if: matrix.test-type.coverageThreshold > 0
         uses: coverallsapp/github-action@master
         env:
           NODE_COVERALLS_DEBUG: 1
