Make analysis job rebuild solution

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -21,6 +21,22 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
+  analysis:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: csharp
+
+      - name: Build solution
+        run: dotnet build
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+
   test:
     needs: [ build ]
     uses: ./.github/workflows/tests.yml
@@ -38,19 +54,6 @@ jobs:
             coverageThreshold: 20
           },
         ]
-
-  analysis:
-    needs: [ build ]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    steps:
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: csharp
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
 
   trigger-deploy:
     needs: [ test ]
