--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -26,6 +26,9 @@ jobs:
     timeout-minutes: 5
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
