--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -26,8 +26,10 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Checkout repository
+      - name: 🛒 Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
